Bug 306471 part 1 - Some code style cleanup for nsExternalHelperAppService::GetTypeFromExtension. r=bz

MozReview-Commit-ID: 3N37Kd2fNjS